<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/background_gradient"
    tools:context=".ForgotPassActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="14dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/link_forgot_password"
                android:padding="10dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/lbl_forgot_password_msg"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_email"
                android:layout_marginTop="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn_login"
                android:text="@string/btn_reset_password"
                android:textStyle="bold"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>