<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/background_gradient"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="14dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_email"
                android:layout_marginTop="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn_login"
                android:text="@string/btn_login"
                android:textStyle="bold"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn_sign_up"
                android:text="@string/btn_signup"
                android:textStyle="bold"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/link_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_forgot_password"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>