<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddQuestionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!-- android.support.v7.widget.Toolbar : This is the full path of the Toolbar class in the Support Library -->
        <!-- ?attr/actionBarSize : The ?attr prefix means that we want to use an attribute from the current theme. -->
        <!-- ?attr/colorPrimary : Make the toolbar's background the same color as the app bar we had previously  -->
        <!-- ThemeOverlay : Toolbar will look like app bar from theme Theme.AppCompat.Light -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_add_question"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/question"/>

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/question_hint"
                android:inputType="textMultiLine" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/answer_one"/>

            <EditText
                android:id="@+id/ans_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer_one_hint"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/answer_two"/>

            <EditText
                android:id="@+id/ans_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer_two_hint"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/answer_three" />

            <EditText
                android:id="@+id/ans_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/answer_three_hint"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/answer_four" />

            <EditText
                android:id="@+id/ans_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:hint="@string/answer_four_hint"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/education_level" />

            <!--EditText
                android:id="@+id/edu_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex. High School"
                android:inputType="text"/-->

            <Spinner
                android:id="@+id/edu_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/category_filter_name" />

            <!--EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex. Mathematics, English..."
                android:inputType="text"/-->

            <Spinner
                android:id="@+id/category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</android.support.constraint.ConstraintLayout>