<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="50dp"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_logo_round"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_email"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn_sign_up"
                android:text="@string/btn_signup"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                android:onClick="onClickSignUpBtn"/>

            <TextView
                android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_login"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:textColor="@color/black"
                android:onClick="onClickLoginLink"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:animateLayoutChanges="true"
        android:background="@android:color/black"
        android:visibility="gone"
        >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>

</RelativeLayout>
